--- a/FrontEnd/JavaScript/Practice Set/1.css
+++ b/FrontEnd/JavaScript/Practice Set/1.css
@@ -1,1 +1,11 @@
-
+.bag-btn{
+  background-color: rgb(78, 165, 78);
+  border: none;
+  padding: 5px 15px;
+  border-radius: 10px;
+}
+.wish-btn{
+  padding: 5px 45px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
